# IAM-Keycloak

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md
devops/: .env.dev  .env.prod  .env.qa  README.md  docker-compose.base.yml  quick-start.sh
doc/: 00-overview.md  01-target-architecture.md  02-analysis-and-design.md  03-transformation-execution.md  04-keycloak-configuration.md  05-infrastructure-as-code.md  06-cicd-pipelines.md  07-security-by-design.md  08-authentication-authorization.md  09-user-lifecycle.md  10-observability.md  11-keycloak-customization.md  12-environment-management.md  13-automation-scripts.md  (+17 more)
examples/backend/fastapi/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt
examples/backend/fastapi/app/: __init__.py  config.py  main.py
examples/backend/fastapi/app/auth/: __init__.py  dependencies.py  models.py  oidc.py
examples/backend/fastapi/app/i18n/: __init__.py  en.json  es.json
examples/backend/fastapi/app/routes/: __init__.py  admin.py  auth.py  dashboard.py  errors.py  home.py  profile.py
examples/backend/fastapi/static/css/: components.css  global.css  layout.css  variables.css
examples/backend/fastapi/static/js/: theme.js
examples/backend/fastapi/templates/: admin.html  base.html  dashboard.html  home.html  profile.html  unauthorized.html
examples/backend/fastapi/templates/partials/: footer.html  header.html
examples/backend/fastapi/tests/: conftest.py  test_dependencies.py  test_models.py
(+540 files in other folders)
