# ---------------------------------------------------------------------------
# pyproject.toml for the IAM FastAPI Example.
# ---------------------------------------------------------------------------

[project]
name = "iam-fastapi-example"
version = "1.0.0"
description = "IAM example with FastAPI, Authlib, and Keycloak OIDC"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "jinja2==3.1.5",
    "authlib==1.4.1",
    "httpx==0.28.1",
    "itsdangerous==2.2.0",
    "python-dotenv==1.0.1",
    "pydantic-settings==2.7.1",
    "starlette==0.45.3",
    "python-multipart==0.0.20",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
